--- a/css/style.css
+++ b/css/style.css
@@ -3720,6 +3720,11 @@ ul {
   padding-left: 76px;
 }
 
+.our_latest_work .apply {
+  padding-left: 15px;
+}
+
+
 @media (max-width: 576px) {
   /* line 22, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_resent_work.scss */
   .our_latest_work .single_work_demo {
@@ -3758,6 +3763,13 @@ ul {
 /* line 39, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_resent_work.scss */
 .our_latest_work .single_work_demo h5 {
   color: #ffffff;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 21px;
+}
+
+.our_latest_work .single_work_demo h4 {
+  color: #000000;
   font-size: 14px;
   text-transform: uppercase;
   margin-bottom: 21px;
