--- a/style.css
+++ b/style.css
@@ -368,11 +368,11 @@ input:-webkit-autofill:focus {
 
 .client-area,
 .header-area {
-    background: #000000 url('images/parallax-2.jpg') no-repeat scroll center center / cover;
+    background: #000000 url('images/vhhacksbackground.png') no-repeat scroll center center / cover;
 }
 
 .anlge-bg {
-    background: url('images/angle-bg.png') no-repeat scroll center bottom -120px / 100% auto;
+    background: url('images/Flat_Vancouver_2.png') no-repeat scroll center bottom -120px / 100% auto;
 }
 
 .overlay {
