--- a/style.css
+++ b/style.css
@@ -173,8 +173,8 @@ input:-webkit-autofill:focus {
 .overlay:before,
 .sky-bg {
     background: #75cbe7;
-    background: -webkit-gradient(linear, left top, left bottom, from(#75cbe7), to(#138fc2));
-    background: linear-gradient(to bottom, #75cbe7 0%, #138fc2 100%);
+    background: -webkit-gradient(linear, left top, left bottom, from(#007eff), to(#44348F));
+    background: linear-gradient(to bottom, #007eff 0%, #44348F 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#75cbe7', endColorstr='#138fc2', GradientType=0);
     color: #ffffff;
 }
@@ -224,7 +224,6 @@ input:-webkit-autofill:focus {
 }
 
 .page-title h2 {
-    text-transform: uppercase;
     position: relative;
     margin-bottom: 20px;
     padding-bottom: 20px;
@@ -309,7 +308,6 @@ input:-webkit-autofill:focus {
 }
 
 .mainmenu-area .logo {
-    text-transform: uppercase;
     letter-spacing: 2px;
     height: inherit;
     margin-top: 8px;
@@ -357,7 +355,7 @@ input:-webkit-autofill:focus {
 }
 
 .mainmenu-area.affix {
-    background-color: #138fc2;
+    background-color: #33b9db;
 }
 
 
@@ -372,7 +370,7 @@ input:-webkit-autofill:focus {
 }
 
 .anlge-bg {
-    background: url('images/Flat_Vancouver_2.png') no-repeat scroll center bottom / 100% auto;
+    background: url('images/vancouver.png') no-repeat scroll center bottom / 100% auto;
 }
 
 .overlay {
