--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,8 +48,11 @@
     }
     .page-title h2,
     .header-text h2 {
-        font-size: 20px;
+        font-size: 50px;
     }
+    .header-text p {
+         font-size: 20px;
+     }
     .mainmenu-area .navbar-toggle {
         margin-top: 20px;
     }
