--- a/style.css
+++ b/style.css
@@ -97,11 +97,11 @@ input:-webkit-autofill:focus {
 
 
 #bubbles {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     left: 0px;
-    top: 100vh;
+    top: 0px;
 }
 
 .full-height {
