--- a/style.css
+++ b/style.css
@@ -97,9 +97,9 @@ input:-webkit-autofill:focus {
 
 
 #bubbles {
-    position: fixed;
+    position: absolute;
     width: 100%;
-    height: 100%;
+    height: 6000px;
     left: 0px;
     top: 0px;
     z-index: 10;
