--- a/style.css
+++ b/style.css
@@ -97,9 +97,9 @@ input:-webkit-autofill:focus {
 
 
 #bubbles {
-    position: absolute;
-    width: 100%;
-    height: 6000px;
+    position: fixed;
+    width: 100vmin;
+    height: 100vmax;
     left: 0px;
     top: 0px;
     z-index: 10;
