--- a/style.css
+++ b/style.css
@@ -103,11 +103,11 @@ input:-webkit-autofill:focus {
 
 
 #bubbles {
-    position: fixed;
+    position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     left: 0px;
-    top: 0px;
+    top: 100vh;
     z-index: 5;
 }
 .full-height {
