Fix Responsive Logo

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -97,6 +97,10 @@
     .mainmenu-area .logo {
         margin-left: 15px;
     }
+    #vhhackslanding{
+        width:30vmax;
+        height:30vh;
+    }
 }
 
 
