Added bobbing motion for bob

--- a/style.css
+++ b/style.css
@@ -108,6 +108,22 @@ input:-webkit-autofill:focus {
     height: 20vw;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1) translateX(-10vw);
+    animation: bob 3s infinite;
+    font-size:0;
+}
+
+@keyframes bob{
+    0%{
+        transform: scaleX(-1) translateY(0px) translateX(-10vw);;
+    }
+    50%{
+        transform: scaleX(-1) translateY(-20px) translateX(-10vw);;
+
+    }
+    100%{
+        transform: scaleX(-1) translateY(0px) translateX(-10vw);;
+
+    }
 }
 
 #bubbles {
