--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ h6 {
     font-family: 'Kollektif';
 }
 
+h4{
+    font-size: 24px;
+}
+
 html,
 body {
     height: 100%;
@@ -81,7 +85,7 @@ body {
 body {
     font-family: 'Inter';
     font-weight: 400;
-    font-size: 15px;
+    font-size: 18px;
     line-height: 1.8;
     color: #515656;
     max-width:100%;
@@ -195,7 +199,7 @@ input:-webkit-autofill:focus {
     border-radius: 100px;
     -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .social-menu li a:hover {
@@ -232,7 +236,7 @@ input:-webkit-autofill:focus {
     padding: 8px 30px;
     border-radius: 50px;
     color: #ffffff;
-    background-color: #007eff;
+    background-color: #51cfdb;
     -webkit-transition: 0.3s;
     transition: 0.3s;
     border: none;
@@ -267,6 +271,7 @@ input:-webkit-autofill:focus {
     position: relative;
     margin-bottom: 20px;
     padding-bottom: 20px;
+    font-size: 40px;
 }
 
 .page-title h2:after {
@@ -278,7 +283,6 @@ input:-webkit-autofill:focus {
     bottom: -10px;
     width: 15px;
     height: 15px;
-    font-size: 14px;
 }
 
 /**
@@ -739,6 +743,10 @@ input:-webkit-autofill:focus {
 *Accordion
 **/
 
+#faq-page a{
+    font-size:22px;
+}
+
 #accordion .panel {
     background: none;
 }
@@ -776,7 +784,7 @@ input:-webkit-autofill:focus {
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%);
-    transform: translate(-50%)
+    transform: translate(-50%);
 }
 
 #accordion .panel .panel-title a span:before {
