--- a/style.css
+++ b/style.css
@@ -408,7 +408,7 @@ input:-webkit-autofill:focus {
 
 .client-area,
 .header-area {
-    background: #0e2946 url('images/landingpage skyline.svg') no-repeat scroll center bottom / cover;
+    background: #0e2946 url('images/vhhacksbackgroundday.png') no-repeat scroll center bottom / cover;
     z-index:11;
 }
 
