--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ input:-webkit-autofill:focus {
 }
 
 #bubbles {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     left: 0px;
