--- a/css/responsive.css
+++ b/css/responsive.css
@@ -63,7 +63,7 @@
         background-color: #ffffff;
     }
     .mainmenu-area #primary-menu {
-        background-image: linear-gradient(to bottom, rgba(10,25,100,0), rgba(10,25,50,0.5));
+        background-color: #138FC2;
     }
     .mainmenu-area #primary-menu ul {
         overflow-y: auto;
