--- a/style.css
+++ b/style.css
@@ -131,9 +131,9 @@ input:-webkit-autofill:focus {
 }
 
 #bubbles {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     left: 0px;
     top: 0px;
     z-index: 5;
