--- a/style.css
+++ b/style.css
@@ -474,6 +474,11 @@ input:-webkit-autofill:focus {
     background: url('images/night-water.svg') no-repeat scroll center bottom / 100% auto;
 }
 
+*{
+    /*border-color: red;*/
+    /*border-style: solid;*/
+    /*border-width: 1px;*/
+}
 
 .overlay:before {
     content: "";
