--- a/style.css
+++ b/style.css
@@ -452,26 +452,26 @@ input:-webkit-autofill:focus {
 
 .client-area,
 .header-area {
-    background: #0e2946 url('images/vhhacksbackgroundday.png') no-repeat scroll center bottom / cover;
+    background: #0e2946 url('images/skylines/vhhacksbackgroundday.png') no-repeat scroll center bottom / cover;
     z-index:11;
 }
 
 .client-area,
 .header-night-area {
-    background: url('images/night-bg.svg') no-repeat scroll center bottom / cover;
+    background: url('images/skylines/night-bg.svg') no-repeat scroll center bottom / cover;
     z-index:11;
 }
 
 .header-skyline{
-    background: url('images/skyline.png') no-repeat scroll center bottom / 100% auto;
+    background: url('images/skylines/skyline.png') no-repeat scroll center bottom / 100% auto;
 }
 
 .anlge-bg {
-    background: url('images/vancouver.png') no-repeat scroll center bottom / 100% auto;
+    background: url('images/skylines/vancouver.png') no-repeat scroll center bottom / 100% auto;
 }
 
 .night-waves {
-    background: url('images/night-water.svg') no-repeat scroll center bottom / 100% auto;
+    background: url('images/skylines/night-water.svg') no-repeat scroll center bottom / 100% auto;
 }
 
 *{
@@ -890,7 +890,7 @@ input:-webkit-autofill:focus {
 }
 
 .footer-bg {
-    background: url('images/Sea_Floor.svg') no-repeat scroll center bottom / 100% 100%;
+    background: url('images/website-decor/Sea_Floor.svg') no-repeat scroll center bottom / 100% 100%;
 }
 
 .footer-top {
